[gd_scene load_steps=8 format=3 uid="uid://bgpl0qa2rinlh"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_8thk7"]
[ext_resource type="PackedScene" uid="uid://ctdk30sfq16mf" path="res://UI/MenuParallaxBg.tscn" id="2_bn0jj"]
[ext_resource type="PackedScene" uid="uid://ciu1xxi3q0njf" path="res://Prefabs/Space/CelestialBodyAnimationSprite.tscn" id="3_ivmdw"]
[ext_resource type="FontFile" uid="uid://b473e647e0sd3" path="res://Assets/Fonts/Pixeled.ttf" id="3_rw4he"]
[ext_resource type="Theme" uid="uid://bkmj4glhuk6vm" path="res://MainMenu.tres" id="4_j7ysw"]
[ext_resource type="AudioStream" uid="uid://dj2ch1xc06fpq" path="res://Assets/Sounds/Music/MainMenuTema.ogg" id="5_t5coc"]

[sub_resource type="LabelSettings" id="LabelSettings_35riq"]
font = ExtResource("3_rw4he")
font_size = 70
outline_size = 20
outline_color = Color(1.44392e-06, 0.459239, 0.47295, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8thk7")

[node name="MenuParallaxBg" parent="." instance=ExtResource("2_bn0jj")]

[node name="CelestialBodyAnimationSprite" parent="MenuParallaxBg" instance=ExtResource("3_ivmdw")]
position = Vector2(1817, 649)
rotation = 0.436332
scale = Vector2(11, 11)
animation = &"4"
body_type = 3

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -185.0
offset_top = 117.0
offset_right = 185.0
offset_bottom = 257.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "DARKSIDE"
label_settings = SubResource("LabelSettings_35riq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 775.0
offset_top = 326.0
offset_right = 1145.0
offset_bottom = 754.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="start_btn" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_j7ysw")
theme_override_colors/font_outline_color = Color(0, 0.458824, 0.47451, 1)
theme_override_constants/outline_size = 10
text = "START"

[node name="muilt_btn" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_j7ysw")
theme_override_colors/font_outline_color = Color(0, 0.458824, 0.47451, 1)
theme_override_constants/outline_size = 10
text = "MUITIPLAYER"

[node name="quit_btn" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_j7ysw")
theme_override_colors/font_outline_color = Color(0, 0.458824, 0.47451, 1)
theme_override_constants/outline_size = 10
text = "QUIT GAME"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t5coc")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/muilt_btn" to="." method="_on_muilt_btn_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
